Replace constructors for URL by those for URI.
Since Java 20, directly call to URL constructors must be replaced by
calls to URI constructors and toURL function.

Signed-off-by: Stéphane Galland <galland@arakhne.org>